using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace ELeagueManager
{
    public class PerfilEstadisticas
    {
        public int PartidasGanadas { get; set; }
        public int PartidasPerdidas { get; set; }
    }
}